--- a/docs/playground/playground.css
+++ b/docs/playground/playground.css
@@ -201,7 +201,7 @@ body::backdrop {
   }
   .topnav.responsive .icon {
     position: absolute;
-    color: white;
+    color: black;
     right: 0;
     top: 0;
   }
@@ -209,6 +209,12 @@ body::backdrop {
     float: none;
     display: block;
     text-align: left;
+  }
+  * ,textarea{
+    font-size: 30px;
+  }
+  .header,#code, .textarea ,.resarea {
+    font-size: 20px;
   }
 }
 
